--- a/tex/purpose-and-benefits.tex
+++ b/tex/purpose-and-benefits.tex
@@ -133,3 +133,11 @@ Eysenck, M. W. et al. 1992/2005 \href{https://psycnet.apa.org/record/2015-09422-
 
 Ṭhānissaro Bhikkhu 2013:  \href{https://www.dhammatalks.org/Archive/Writings/Ebooks/BMC1&2_200826.pdf}{\textit{``The Buddhist Monastic Code II''}}, Valley Center, CA: Metta Forest Monastery.
 
+\ifdigitalversion
+
+  \else
+
+\clearpage
+
+\fi
+
