--- a/tex/recitations/homage.tex
+++ b/tex/recitations/homage.tex
@@ -670,7 +670,7 @@ Saṅkhittena pañc'upādāna-kkhandhā dukkhā
 \linkdest{endnote15-body}
 \begin{english}
   In brief \breathmark\ the five aggregates of clinging are dukkha\ifdigitalversion\makeatletter\hyperlink{endnote15-appendix}\Hy@raisedlink{{\pagenote{%
-        \hypertarget{endnote15-appendix}{\hyperlink{endnote15-body}{WPN: ``In brief the five focuses of identity are dukkha''}}}}}\makeatother\fi
+        \hypertarget{endnote15-appendix}{\hyperlink{endnote15-body}{WPN: ``In brief the five focuses of identity are \textit{dukkha}''}}}}}\makeatother\fi
 \end{english}
 
 Seyyath'īdaṁ
