--- a/tex/recitations/reflections.tex
+++ b/tex/recitations/reflections.tex
@@ -435,7 +435,7 @@ Sabbehi me piyehi manāpehi nānābhāvo vinābhāvo
   Either skillful or harmful\\
   \linkdest{endnote98-body}
   Of such acts \breathmark\ I will be the heir\ifdigitalversion\makeatletter\hyperlink{endnote98-appendix}\Hy@raisedlink{{\pagenote{%
-        \hypertarget{endnote98-appendix}{\hyperlink{endnote98-body}{WPN: ``For good or for ill, of that I will be the heir'' For the sake of consistency with other passages which were translated differently, that translation has been chosen.}}}}}\makeatother\fi
+        \hypertarget{endnote98-appendix}{\hyperlink{endnote98-body}{WPN: ``For good or for ill, of that I will be the heir''. For the sake of consistency with other passages which were translated differently, that translation has been chosen.}}}}}\makeatother\fi
 \end{english-verses}
 
 Evaṁ amhehi abhiṇhaṁ paccavekkhitabbaṁ
